[gd_scene load_steps=4 format=3 uid="uid://donvdvxsn3tkj"]

[ext_resource type="Script" path="res://TrapSpear.gd" id="1_6e2fw"]
[ext_resource type="Texture2D" uid="uid://ni8d6flc27bi" path="res://weapon_pole.png" id="2_ck5j3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k50j2"]

[node name="TrapSpear" type="Node2D"]
scale = Vector2(3, 3)
script = ExtResource("1_6e2fw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ck5j3")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -16)
scale = Vector2(0.6, 1.2)
shape = SubResource("CapsuleShape2D_k50j2")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
